--- a/crates/isorun/Cargo.toml
+++ b/crates/isorun/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 anyhow = "1.0.100"
 anymap = "0.12.1"
 async-trait = "0.1.89"
+isopack = { path = "../isopack" }
 tokio = "1.48.0"
 wasmtime = "39.0.1"
 wasmtime-wasi = "39.0.1"
