--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,11 @@
 members = ["crates/*"]
 exclude = ["apps/*"]
 resolver = "3"
+
+[workspace.dependencies]
+wasmtime = "39.0.1"
+wasmtime-wasi = "39.0.1"
+anyhow = "1.0"
+tokio = { version = "1.42", features = ["full"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
