--- a/crates/isorun/Cargo.toml
+++ b/crates/isorun/Cargo.toml
@@ -4,13 +4,15 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-anyhow = "1.0.100"
+# NOTE: For shared dependencies, add to [workspace.dependencies] in root Cargo.toml and use { workspace = true }
+anyhow = { workspace = true }
 anymap = "0.12.1"
 async-trait = "0.1.89"
 isopack = { path = "../isopack" }
-tokio = "1.48.0"
-wasmtime = "39.0.1"
-wasmtime-wasi = "39.0.1"
+isorpc = { path = "../isorpc" }
+tokio = { workspace = true }
+wasmtime = { workspace = true }
+wasmtime-wasi = { workspace = true }
 
 [dev-dependencies]
-tokio = { version = "1.48.0", features = ["full"] }
+tokio = { workspace = true }
