--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ resolver = "3"
 wasmtime = "39.0.1"
 wasmtime-wasi = "39.0.1"
 anyhow = "1.0"
+async-trait = "0.1.89"
 tokio = { version = "1.42", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
