--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = ["crates/*"]
-exclude = ["apps/*"]
+exclude = ["apps/*", "crates/tmp/*"]
 resolver = "3"
 
 [workspace.dependencies]
