--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = ["crates/*"]
-exclude = ["apps/*", "crates/tmp/*"]
+exclude = ["apps/*", "crates/tmp/*", "crates/isorun"]
 resolver = "3"
 
 [workspace.dependencies]
@@ -11,3 +11,6 @@ async-trait = "0.1.89"
 tokio = { version = "1.42", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+dashmap = "6.0"
+anymap = "0.12.1"
+rand = "0.8"
